--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ def guice_servlet_version = '4.0'
 subprojects {
     apply plugin: 'maven-publish'
     repositories {
+        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
         mavenCentral()
         mavenLocal()
     }
